fix: implement fail-fast health checks to resolve benchmark timeout issues
- Add getCurrentStatus() method to JwksLoader interface for non-blocking status checks
- Modify HttpJwksLoader.isHealthy() to use getCurrentStatus() instead of blocking ensureLoaded()
- Update JwksEndpointHealthCheck to use fail-fast getCurrentStatus() method
- Add comprehensive test for fail-fast behavior with timing verification
- Update all JwksLoader implementations and tests to support new getCurrentStatus() method
- Verified fix with integration benchmarks - health checks now complete in ~1.6s instead of timing out

This resolves the MicroProfile Health specification compliance issue where readiness checks
were blocking on I/O operations, causing benchmark timeouts during JWKS loading.

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>